--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 text-center heading-section ftco-animate">
           	<span class="clone">Testimony</span>
-            <h2 class="mb-3">Sweet Messages</h2>
+            <h2 class="mb-3">Deixe sua mensagem aos noivos</h2>
           </div>
         </div>
-			<div class="fb-comments" data-href="https://alextchatalov.github.io/casamento/" data-numposts="5" data-width=""></div>
+			<div class="fb-comments" data-href="https://alextchatalov.github.io/casamento/" data-numposts="5" data-width="100%"></div>
     	</div>
     </section>
 
