alterado a descriçao para pt-br

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav nav ml-auto">
-	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
-	          <li class="nav-item"><a href="#groom-bride-section" class="nav-link"><span>Groom &amp; Bride</span></a></li>
-	          <li class="nav-item"><a href="#lovestory-section" class="nav-link"><span>Love Story</span></a></li>
-	          <li class="nav-item"><a href="#greeting-section" class="nav-link"><span>Greetings</span></a></li>
-	          <li class="nav-item"><a href="#people-section" class="nav-link"><span>People</span></a></li>
-	          <li class="nav-item"><a href="#when-where-section" class="nav-link"><span>When &amp; Where</span></a></li>
-	          <li class="nav-item"><a href="#rsvp-section" class="nav-link"><span>RSVP</span></a></li>
-	          <li class="nav-item"><a href="#gallery-section" class="nav-link"><span>Gallery</span></a></li>
+	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Inicio</span></a></li>
+	          <li class="nav-item"><a href="#groom-bride-section" class="nav-link"><span>Noivo &amp; Noiva</span></a></li>
+	          <li class="nav-item"><a href="#lovestory-section" class="nav-link"><span>História de Amor</span></a></li>
+	          <li class="nav-item"><a href="#greeting-section" class="nav-link"><span>Mensagens</span></a></li>
+	          <li class="nav-item"><a href="#people-section" class="nav-link"><span>Familiáres</span></a></li>
+	          <li class="nav-item"><a href="#when-where-section" class="nav-link"><span>Onde &amp; Quando</span></a></li>
+	          <li class="nav-item"><a href="#rsvp-section" class="nav-link"><span>Confirmação</span></a></li>
+	          <li class="nav-item"><a href="#gallery-section" class="nav-link"><span>Fotos</span></a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -231,83 +231,83 @@
           </div>
         </div>
         <div class="row">
-        	<div class="col-md-12">
-        		<div class="carousel-friends owl-carousel ftco-owl ftco-animate">
-        			<div class="item">
-                <div class="people text-center">
-		        			<div class="img" style="background-image: url(images/groom-men-1.jpg);"></div>
-		        			<div class="text">
-		        				<h3>Mark Tomy</h3>
-		        				<span>Groomsmen</span>
-		        			</div>
-		        		</div>
-              </div>
-              <div class="item">
-                <div class="people text-center">
-		        			<div class="img" style="background-image: url(images/groom-men-2.jpg);"></div>
-		        			<div class="text">
-		        				<h3>John Henceworth</h3>
-		        				<span>Groomsmen</span>
-		        			</div>
-		        		</div>
-              </div>
-              <div class="item">
-                <div class="people text-center">
-		        			<div class="img" style="background-image: url(images/groom-men-3.jpg);"></div>
-		        			<div class="text">
-		        				<h3>Rey Cooper</h3>
-		        				<span>Groomsmen</span>
-		        			</div>
-		        		</div>
-              </div>
-              <div class="item">
-                <div class="people text-center">
-		        			<div class="img" style="background-image: url(images/groom-men-4.jpg);"></div>
-		        			<div class="text">
-		        				<h3>Robert Chan</h3>
-		        				<span>Groomsmen</span>
-		        			</div>
-		        		</div>
-              </div>
-              <div class="item">
-                <div class="people text-center">
-		        			<div class="img" style="background-image: url(images/bridesmaid-1.jpg);"></div>
-		        			<div class="text">
-		        				<h3>Rose Jones</h3>
-		        				<span>Bridesmaid</span>
-		        			</div>
-		        		</div>
-              </div>
-              <div class="item">
-                <div class="people text-center">
-		        			<div class="img" style="background-image: url(images/bridesmaid-2.jpg);"></div>
-		        			<div class="text">
-		        				<h3>Mary Dell</h3>
-		        				<span>Bridesmaid</span>
-		        			</div>
-		        		</div>
-              </div>
-              <div class="item">
-                <div class="people text-center">
-		        			<div class="img" style="background-image: url(images/bridesmaid-3.jpg);"></div>
-		        			<div class="text">
-		        				<h3>Alicia Brean</h3>
-		        				<span>Bridesmaid</span>
-		        			</div>
-		        		</div>
-              </div>
-              <div class="item">
-                <div class="people text-center">
-		        			<div class="img" style="background-image: url(images/bridesmaid-4.jpg);"></div>
-		        			<div class="text">
-		        				<h3>Angel Worth</h3>
-		        				<span>Bridesmaid</span>
-		        			</div>
-		        		</div>
-              </div>
-        		</div>
-        	</div>
-        </div>
+			<div class="col-md-12">
+			   <div class="carousel-friends owl-carousel ftco-owl ftco-animate">
+				  <div class="item">
+					 <div class="people text-center">
+						<div class="img" style="background-image: url(images/groom-men-1.jpg);"></div>
+						<div class="text">
+						   <h3>Mark Tomy</h3>
+						   <span>Groomsmen</span>
+						</div>
+					 </div>
+				  </div>
+				  <div class="item">
+					 <div class="people text-center">
+						<div class="img" style="background-image: url(images/groom-men-2.jpg);"></div>
+						<div class="text">
+						   <h3>John Henceworth</h3>
+						   <span>Groomsmen</span>
+						</div>
+					 </div>
+				  </div>
+				  <div class="item">
+					 <div class="people text-center">
+						<div class="img" style="background-image: url(images/groom-men-3.jpg);"></div>
+						<div class="text">
+						   <h3>Rey Cooper</h3>
+						   <span>Groomsmen</span>
+						</div>
+					 </div>
+				  </div>
+				  <div class="item">
+					 <div class="people text-center">
+						<div class="img" style="background-image: url(images/groom-men-4.jpg);"></div>
+						<div class="text">
+						   <h3>Robert Chan</h3>
+						   <span>Groomsmen</span>
+						</div>
+					 </div>
+				  </div>
+				  <div class="item">
+					 <div class="people text-center">
+						<div class="img" style="background-image: url(images/bridesmaid-1.jpg);"></div>
+						<div class="text">
+						   <h3>Rose Jones</h3>
+						   <span>Bridesmaid</span>
+						</div>
+					 </div>
+				  </div>
+				  <div class="item">
+					 <div class="people text-center">
+						<div class="img" style="background-image: url(images/bridesmaid-2.jpg);"></div>
+						<div class="text">
+						   <h3>Mary Dell</h3>
+						   <span>Bridesmaid</span>
+						</div>
+					 </div>
+				  </div>
+				  <div class="item">
+					 <div class="people text-center">
+						<div class="img" style="background-image: url(images/bridesmaid-3.jpg);"></div>
+						<div class="text">
+						   <h3>Alicia Brean</h3>
+						   <span>Bridesmaid</span>
+						</div>
+					 </div>
+				  </div>
+				  <div class="item">
+					 <div class="people text-center">
+						<div class="img" style="background-image: url(images/bridesmaid-4.jpg);"></div>
+						<div class="text">
+						   <h3>Angel Worth</h3>
+						   <span>Bridesmaid</span>
+						</div>
+					 </div>
+				  </div>
+			   </div>
+			</div>
+		 </div>
     	</div>
     </section>
 
@@ -315,8 +315,8 @@
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 text-center heading-section ftco-animate">
-          	<span class="clone">Place</span>
-            <h2 class="mb-3">Place &amp; Time</h2>
+          	<span class="clone">Local & Hora</span>
+            <h2 class="mb-3">Local &amp; Hora</h2>
           </div>
         </div>
         <div class="row">
@@ -336,11 +336,11 @@
         		<div class="place img" style="background-image: url(images/place-2.jpg);">
         			<div class="text text-center">
 	        			<span class="icon flaticon-wedding-kiss"></span>
-	        			<h3>The Ceremony</h3>
-	        			<p><span>Saturday, 28, 2019</span><br><span>02:00 pm-10:00 pm</span></p>
-	        			<p><span>203 Fake St. Mountain View, San Francisco, California, USA</span></p>
-	        			<p><a href="#">+0 (123) 456 78 910</a></p>
-	        			<p><a href="#" class="btn-custom">See Map</a></p>
+	        			<h3>A Cerimônia</h3>
+	        			<p><span>Sábado, 16 de Outubro de 2019</span><br><span>16:00 - 17:00 pm</span></p>
+	        			<p><span>Praça Monsenhor Bernardo Cnudde - Zona 7, Maringá - PR, 87030-040</span></p>
+						<p><a href="https://www.google.com/maps/place/Pra%C3%A7a+Monsenhor+Bernardo+Cnudde+-+Zona+7,+Maring%C3%A1+-+PR,+87030-040/data=!4m2!3m1!1s0x94ecd0d77db9e8d9:0xa2ec69153faef162?sa=X&ved=2ahUKEwi9uvydiu7rAhWlJrkGHfBeBxwQ8gEwAHoECAsQAQ" 
+							class="btn-custom">Veja no Mapa</a></p>
 	        		</div>
         		</div>
         	</div>
@@ -348,11 +348,11 @@
         		<div class="place img" style="background-image: url(images/place-3.jpg);">
         			<div class="text text-center">
 	        			<span class="icon flaticon-cake"></span>
-	        			<h3>The Party</h3>
-	        			<p><span>Saturday, 28, 2019</span><br><span>02:00 pm-10:00 pm</span></p>
-	        			<p><span>203 Fake St. Mountain View, San Francisco, California, USA</span></p>
-	        			<p><a href="#">+0 (123) 456 78 910</a></p>
-	        			<p><a href="#" class="btn-custom">See Map</a></p>
+	        			<h3>A Festa</h3>
+	        			<p><span>Sábado, 16 de Outubro de 2019</span><br><span>18:00 - 02:00</span></p>
+	        			<p><span>R. Rio Grande do Sul, 86, Sarandi - PR, 87115-035</span></p>
+						<p><a href="https://www.google.com/maps/place/R.+Rio+Grande+do+Sul,+86,+Sarandi+-+PR,+87115-035/@-23.4912712,-51.9035964,17z/data=!3m1!4b1!4m5!3m4!1s0x94ecdbac29a025a9:0xb5f09c9a3c910d5b!8m2!3d-23.4912712!4d-51.9014077" 
+							class="btn-custom">Veja no Mapa</a></p>
 	        		</div>
         		</div>
         	</div>
