alterado a descriçao para pt-br

--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
 			    				<div class="py-md-4">
 				    				<div class="row justify-content-start pb-3">
 						          <div class="col-md-12 ftco-animate p-4 p-lg-5 text-center">
-						          	<span class="subheading mb-4">Junte-se a nós nesta celebraÃ§Ã£o <br>de casamento de</span>
+						          	<span class="subheading mb-4">Junte-se a nós nesta celebração <br>de casamento de</span>
 						            <h2 class="mb-4">Alex <span>&amp;</span> Nathália</h2>
 						            <span class="icon flaticon-rose-variant-outline-with-vines"></span>
-						            <span class="subheading">A celebraÃ§Ã£o comeÃ§a em</span>
+						            <span class="subheading">A celebração começa em</span>
 						           	<p class="time mb-4"><span>16 de Outrubro de 2021</span></p>
 						           	<span class="subheading mb-5">Inicio 17:00 </span>
 						           	<span class="subheading mb-5">Na igreja Divino Espirito Santo</span>
@@ -145,8 +145,8 @@
    		<div class="container">
    			<div class="row justify-content-center pb-5">
           <div class="col-md-12 text-center heading-section ftco-animate">
-          	<span class="clone">HistÃ³ria de Amor</span>
-            <h2 class="mb-3">HistÃ³ria de Amor</h2>
+          	<span class="clone">História de Amor</span>
+            <h2 class="mb-3">História de Amor</h2>
           </div>
         </div>
         <div class="row">
@@ -337,7 +337,7 @@
         			<div class="text text-center">
 	        			<span class="icon flaticon-wedding-kiss"></span>
 	        			<h3>A Cerimônia</h3>
-	        			<p><span>Sábado, 16 de Outubro de 2019</span><br><span>16:00 - 17:00 pm</span></p>
+	        			<p><span>Sábado, 16 de Outubro de 2019</span><br><span>16:00 - 17:00</span></p>
 	        			<p><span>Praça Monsenhor Bernardo Cnudde - Zona 7, Maringá - PR, 87030-040</span></p>
 						<p><a href="https://www.google.com/maps/place/Pra%C3%A7a+Monsenhor+Bernardo+Cnudde+-+Zona+7,+Maring%C3%A1+-+PR,+87030-040/data=!4m2!3m1!1s0x94ecd0d77db9e8d9:0xa2ec69153faef162?sa=X&ved=2ahUKEwi9uvydiu7rAhWlJrkGHfBeBxwQ8gEwAHoECAsQAQ" 
 							class="btn-custom">Veja no Mapa</a></p>
