--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://s.pageclip.co/v1/pageclip.css" media="screen">
-
+	
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	<div id="fb-root"></div>
@@ -376,24 +376,22 @@
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 text-center heading-section ftco-animate">
-          	<span class="clone">RSVP</span>
-            <h2 class="mb-3">Are Your Attending?</h2>
+            <h2 class="mb-3">Confirme sua Presença</h2>
           </div>
         </div>
         <div class="row justify-content-center">
         	<div class="col-md-7">
-        		<form action="https://send.pageclip.co/lc4gAbsEwmt4HCHu08SHqd3GAWunchKT/casamento" class="pageclip-form" method="post">
-					<!-- Replace these inputs with your own. Make sure they have a "name" attribute! -->
-					<input type="text" name="name" value="Roscoe Jones" />
-					<input type="email" name="email" value="roscoe@example.com" />
-
-					<!-- This button will have a loading spinner. Keep the inner span for best results. -->
-					<button type="submit" class="pageclip-form__submit">
-						<span>Send</span>
-					</button>
-				</form>
-        	</div>
         </div>
+		<form action="https://send.pageclip.co/lc4gAbsEwmt4HCHu08SHqd3GAWunchKT" class="pageclip-form" method="post"></form>
+			<input type="text" class="form-control" placeholder="Nome">
+			<input type="text" class="form-control" placeholder="E-mail">
+			<br/>
+			<button type="submit" class="pageclip-form__submit btn btn-primary py-3 px-4">
+				<span>Confirmar</span>
+			</button>
+		</form>
+		</div>
+		</div>
     	</div>
     </section>
 
