--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="#groom-bride-section" class="nav-link" onclick="tocarMusica();">
-                            <span>Noivo &amp;Noiva</span>
+                            <span>Noivo &amp; Noiva</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -63,7 +63,7 @@
                     </li>
                     <li class="nav-item">
                         <a href="#people-section" class="nav-link" onclick="tocarMusica();">
-                            <span>Familiáres</span>
+                            <span>Familiares</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -125,13 +125,13 @@
                                     <div class="row justify-content-start pb-3">
                                         <div class="col-md-12 ftco-animate p-4 p-lg-5 text-center">
                                             <span class="subheading mb-4">Junte-se a nós nesta celebração <br>de
-												casamento de</span>
+												casamento! </span>
                                             <h2 class="mb-4">Alex <span>&amp;</span> Nathália</h2>
                                             <span class="icon flaticon-rose-variant-outline-with-vines"></span>
                                             <span class="subheading">A celebração começa em</span>
                                             <p class="time mb-4"><span>16 de Outrubro de 2021</span></p>
-                                            <span class="subheading mb-5">Inicio 17:00 </span>
-                                            <span class="subheading mb-5">Na igreja Divino Espirito Santo</span>
+                                            <span class="subheading mb-5">Inicio 16:30 </span>
+                                            <span class="subheading mb-5">Na igreja Divino Espírito Santo</span>
                                         </div>
                                     </div>
                                 </div>
@@ -368,24 +368,12 @@
             </div>
             <div class="row">
                 <div class="col-md-4 ftco-animate">
-                    <div class="place img" style="background-image: url(images/place-1.jpg);">
-                        <div class="text text-center">
-                            <span class="icon flaticon-reception-bell"></span>
-                            <h3>The Reception</h3>
-                            <p><span>Saturday, 28, 2019</span><br><span>02:00 pm-10:00 pm</span></p>
-                            <p><span>203 Fake St. Mountain View, San Francisco, California, USA</span></p>
-                            <p><a href="#">+0 (123) 456 78 910</a></p>
-                            <p><a href="#" class="btn-custom">See Map</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 ftco-animate">
                     <div class="place img" style="background-image: url(images/place-2.jpg);">
                         <div class="text text-center">
                             <span class="icon flaticon-wedding-kiss"></span>
                             <h3>A Cerimônia</h3>
-                            <p><span>Sábado, 16 de Outubro de 2019</span><br><span>16:00 - 17:00</span></p>
-                            <p><span>Praça Monsenhor Bernardo Cnudde - Zona 7, Maringá - PR, 87030-040</span></p>
+                            <p><span>Sábado, 16 de Outubro de 2021</span><br><span>16:30 - 17:30</span></p>
+                            <p><span>Paróquia Divino Espírito Santo - Praça Monsenhor Bernardo Cnudde - Zona 7 - Maringá/PR - CEP: 87030-040</span></p>
                             <p><a href="https://www.google.com/maps/place/Pra%C3%A7a+Monsenhor+Bernardo+Cnudde+-+Zona+7,+Maring%C3%A1+-+PR,+87030-040/data=!4m2!3m1!1s0x94ecd0d77db9e8d9:0xa2ec69153faef162?sa=X&ved=2ahUKEwi9uvydiu7rAhWlJrkGHfBeBxwQ8gEwAHoECAsQAQ"
                                     class="btn-custom" target="_blank">Veja no Mapa</a></p>
                         </div>
@@ -395,9 +383,9 @@
                     <div class="place img" style="background-image: url(images/place-3.jpg);">
                         <div class="text text-center">
                             <span class="icon flaticon-cake"></span>
-                            <h3>A Festa</h3>
-                            <p><span>Sábado, 16 de Outubro de 2019</span><br><span>18:00 - 02:00</span></p>
-                            <p><span>R. Rio Grande do Sul, 86, Sarandi - PR, 87115-035</span></p>
+                            <h3>A Recepção</h3>
+                            <p><span>Sábado, 16 de Outubro de 2021</span><br><span>18:00 - 02:00</span></p>
+                            <p><span>Manancial Eventos: Rua Rio Grande do Sul, 86 - Sarandi/PR - CEP: 87115-035</span></p>
                             <p><a href="https://www.google.com/maps/place/R.+Rio+Grande+do+Sul,+86,+Sarandi+-+PR,+87115-035/@-23.4912712,-51.9035964,17z/data=!3m1!4b1!4m5!3m4!1s0x94ecdbac29a025a9:0xb5f09c9a3c910d5b!8m2!3d-23.4912712!4d-51.9014077" class="btn-custom"
                                     target="_blank">Veja no Mapa</a></p>
                         </div>
