--- a/index.html
+++ b/index.html
@@ -62,11 +62,6 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="#people-section" class="nav-link" onclick="tocarMusica();">
-                            <span>Familiares</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
                         <a href="#when-where-section" class="nav-link" onclick="tocarMusica();">
                             <span>Onde &amp;Quando</span>
                         </a>
@@ -266,95 +261,6 @@
                 </div>
             </div>
             <div class="fb-comments" data-href="https://alextchatalov.github.io/casamento/" data-numposts="5" data-width="100%"></div>
-        </div>
-    </section>
-
-    <section class="ftco-section" id="people-section">
-        <div class="container-fluid px-md-5">
-            <div class="row justify-content-center pb-5">
-                <div class="col-md-12 text-center heading-section ftco-animate">
-                    <span class="clone">People</span>
-                    <h2 class="mb-3">Family &amp; Friends</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="carousel-friends owl-carousel ftco-owl ftco-animate">
-                        <div class="item">
-                            <div class="people text-center">
-                                <div class="img" style="background-image: url(images/groom-men-1.jpg);"></div>
-                                <div class="text">
-                                    <h3>Mark Tomy</h3>
-                                    <span>Groomsmen</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="people text-center">
-                                <div class="img" style="background-image: url(images/groom-men-2.jpg);"></div>
-                                <div class="text">
-                                    <h3>John Henceworth</h3>
-                                    <span>Groomsmen</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="people text-center">
-                                <div class="img" style="background-image: url(images/groom-men-3.jpg);"></div>
-                                <div class="text">
-                                    <h3>Rey Cooper</h3>
-                                    <span>Groomsmen</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="people text-center">
-                                <div class="img" style="background-image: url(images/groom-men-4.jpg);"></div>
-                                <div class="text">
-                                    <h3>Robert Chan</h3>
-                                    <span>Groomsmen</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="people text-center">
-                                <div class="img" style="background-image: url(images/bridesmaid-1.jpg);"></div>
-                                <div class="text">
-                                    <h3>Rose Jones</h3>
-                                    <span>Bridesmaid</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="people text-center">
-                                <div class="img" style="background-image: url(images/bridesmaid-2.jpg);"></div>
-                                <div class="text">
-                                    <h3>Mary Dell</h3>
-                                    <span>Bridesmaid</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="people text-center">
-                                <div class="img" style="background-image: url(images/bridesmaid-3.jpg);"></div>
-                                <div class="text">
-                                    <h3>Alicia Brean</h3>
-                                    <span>Bridesmaid</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="people text-center">
-                                <div class="img" style="background-image: url(images/bridesmaid-4.jpg);"></div>
-                                <div class="text">
-                                    <h3>Angel Worth</h3>
-                                    <span>Bridesmaid</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
 
@@ -574,92 +480,6 @@
         </div>
     </section>
 
-    <footer class="ftco-footer ftco-section">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row mb-5">
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Hookup</h2>
-                        <p>Far far away, behind the word mountains, far from the countries.</p>
-                        <ul class="ftco-footer-social list-unstyled mt-5">
-                            <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                            <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4 ml-md-4">
-                        <h2 class="ftco-heading-2">Quick Links</h2>
-                        <ul class="list-unstyled">
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Wellness</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Vintge stores</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Trekking</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Tour</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Sightseeing</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Many more..</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4 ml-md-4">
-                        <h2 class="ftco-heading-2">Links</h2>
-                        <ul class="list-unstyled">
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Groom &amp; Bride</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Story</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Greetings</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>People</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Where &amp; When</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>RSVP</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Gallery</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Services</h2>
-                        <ul class="list-unstyled">
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Organizer</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Venue</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Wedding Ceremony</a></li>
-                            <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Accomodation</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md">
-                    <div class="ftco-footer-widget mb-4">
-                        <h2 class="ftco-heading-2">Have a Questions?</h2>
-                        <div class="block-23 mb-3">
-                            <ul>
-                                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain
-										View, San Francisco, California, USA</span></li>
-                                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929
-											210</span></a></li>
-                                <li><a href="#"><span class="icon icon-envelope pr-4"></span><span
-											class="text">info@yourdomain.com</span></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 text-center">
-
-                    <p>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        Copyright &copy;
-                        <script>
-                            document.write(new Date().getFullYear());
-                        </script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    </p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
     <!-- loader -->
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px">
 			<circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" />
@@ -684,8 +504,15 @@
     <script src="js/google-map.js"></script>
     <script src="js/main.js"></script>
     <script>
+        var sounds = new Array(new Audio("songs/music.mp3"), new Audio("songs/music2.mp3"));
+        var i = -1;
+
         function tocarMusica() {
-            document.getElementById('musica').play();
+            //document.getElementById('musica').play();
+            i++;
+            if (i == sounds.length) i = 0;
+            sounds[i].addEventListener('ended', tocarMusica);
+            sounds[i].play();
         }
     </script>
 </body>
