--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <ul class="navbar-nav nav ml-auto">
                     <li class="nav-item">
                         <a href="#home-section" class="nav-link" onclick="tocarMusica();">
-                            <span>Inicio</span>
+                            <span>Início</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -125,7 +125,7 @@
                                             <span class="icon flaticon-rose-variant-outline-with-vines"></span>
                                             <span class="subheading">A celebração começa em</span>
                                             <p class="time mb-4"><span>16 de Outrubro de 2021</span></p>
-                                            <span class="subheading mb-5">Inicio 16:30 </span>
+                                            <span class="subheading mb-5">Início, às 16:30 </span>
                                             <span class="subheading mb-5">Na igreja Divino Espírito Santo</span>
                                         </div>
                                     </div>
