--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <div class="container">
             <div class="row justify-content-center pb-5">
                 <div class="col-md-12 text-center heading-section ftco-animate">
-                    <span class="clone">Testimony</span>
+                    <span class="clone">Mensagens</span>
                     <h2 class="mb-3">Deixe sua mensagem aos noivos</h2>
                 </div>
             </div>
