Alterada datas e horarios
alterado data e horarios

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                             <span class="icon flaticon-rose-variant-outline-with-vines"></span>
                                             <span class="subheading">A celebração começa em</span>
                                             <p class="time mb-4"><span>16 de Outrubro de 2021</span></p>
-                                            <span class="subheading mb-5">Início, às 16:30 </span>
+                                            <span class="subheading mb-5">Início, às 10h </span>
                                             <span class="subheading mb-5">Na igreja Divino Espírito Santo</span>
                                         </div>
                                     </div>
@@ -275,7 +275,7 @@
                         <div class="text text-center">
                             <span class="icon flaticon-wedding-kiss"></span>
                             <h3>A Cerimônia</h3>
-                            <p><span>Sábado, 16 de Outubro de 2021</span><br><span>16:30 - 17:30</span></p>
+                            <p><span>Sábado, 16 de Outubro de 2021</span><br><span>10h - 11h</span></p>
                             <p><span>Paróquia Divino Espírito Santo - Praça Monsenhor Bernardo Cnudde - Zona 7 - Maringá/PR - CEP: 87030-040</span></p>
                             <p><a href="https://www.google.com/maps/place/Pra%C3%A7a+Monsenhor+Bernardo+Cnudde+-+Zona+7,+Maring%C3%A1+-+PR,+87030-040/data=!4m2!3m1!1s0x94ecd0d77db9e8d9:0xa2ec69153faef162?sa=X&ved=2ahUKEwi9uvydiu7rAhWlJrkGHfBeBxwQ8gEwAHoECAsQAQ"
                                     class="btn-custom" target="_blank">Veja no Mapa</a></p>
@@ -287,7 +287,7 @@
                         <div class="text text-center">
                             <span class="icon flaticon-cake"></span>
                             <h3>A Recepção</h3>
-                            <p><span>Sábado, 16 de Outubro de 2021</span><br><span>18:00 - 02:00</span></p>
+                            <p><span>Sábado, 16 de Outubro de 2021</span><br><span>11:30 - 19:30 </span></p>
                             <p><span>Manancial Eventos: Rua Rio Grande do Sul, 86 - Sarandi/PR - CEP: 87115-035</span></p>
                             <p><a href="https://www.google.com/maps/place/R.+Rio+Grande+do+Sul,+86,+Sarandi+-+PR,+87115-035/@-23.4912712,-51.9035964,17z/data=!3m1!4b1!4m5!3m4!1s0x94ecdbac29a025a9:0xb5f09c9a3c910d5b!8m2!3d-23.4912712!4d-51.9014077" class="btn-custom"
                                     target="_blank">Veja no Mapa</a></p>
